--- a/ui/CrlDetail.ui
+++ b/ui/CrlDetail.ui
@@ -6,22 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>488</width>
-    <height>352</height>
+    <width>530</width>
+    <height>381</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QWidget" name="widget" native="true"/>
-   </item>
-   <item>
     <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
-     </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
      <item>
       <widget class="QLabel" name="TextLabel1">
        <property name="font">
@@ -80,16 +71,13 @@
    <item>
     <widget class="QTabWidget" name="tabview">
      <property name="currentIndex">
-      <number>0</number>
+      <number>3</number>
      </property>
      <widget class="QWidget" name="unnamed">
       <attribute name="title">
        <string>&amp;Status</string>
       </attribute>
       <layout class="QVBoxLayout">
-       <property name="spacing">
-        <number>6</number>
-       </property>
        <property name="margin">
         <number>8</number>
        </property>
@@ -121,17 +109,8 @@
           <property name="margin">
            <number>8</number>
           </property>
-          <property name="spacing">
-           <number>6</number>
-          </property>
           <item row="2" column="1">
            <layout class="QHBoxLayout">
-            <property name="spacing">
-             <number>6</number>
-            </property>
-            <property name="margin">
-             <number>0</number>
-            </property>
             <item>
              <widget class="ClickLabel" name="signCheck"/>
             </item>
@@ -203,9 +182,6 @@
           <property name="margin">
            <number>8</number>
           </property>
-          <property name="spacing">
-           <number>6</number>
-          </property>
           <item row="1" column="0">
            <widget class="QLabel" name="TextLabel2_2">
             <property name="text">
@@ -252,9 +228,6 @@
        <string>&amp;Issuer</string>
       </attribute>
       <layout class="QVBoxLayout">
-       <property name="spacing">
-        <number>6</number>
-       </property>
        <property name="margin">
         <number>11</number>
        </property>
@@ -268,9 +241,6 @@
        <string>&amp;Extensions</string>
       </attribute>
       <layout class="QVBoxLayout">
-       <property name="spacing">
-        <number>6</number>
-       </property>
        <property name="margin">
         <number>11</number>
        </property>
@@ -291,9 +261,6 @@
        <string>&amp;Revocation list</string>
       </attribute>
       <layout class="QVBoxLayout">
-       <property name="spacing">
-        <number>6</number>
-       </property>
        <property name="margin">
         <number>11</number>
        </property>
@@ -305,15 +272,9 @@
          <property name="selectionMode">
           <enum>QAbstractItemView::NoSelection</enum>
          </property>
-         <property name="rootIsDecorated">
-          <bool>false</bool>
-         </property>
-         <property name="uniformRowHeights">
-          <bool>true</bool>
-         </property>
          <column>
           <property name="text">
-           <string>0</string>
+           <string notr="true">1</string>
           </property>
          </column>
         </widget>
@@ -358,8 +319,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>349</x>
-     <y>321</y>
+     <x>355</x>
+     <y>376</y>
     </hint>
     <hint type="destinationlabel">
      <x>169</x>
