Assure compatibility with Qt 4.6

--- a/ui/NewCrl.ui
+++ b/ui/NewCrl.ui
@@ -219,10 +219,13 @@
       <item row="0" column="1">
        <widget class="hashBox" name="hashAlgo"/>
       </item>
-      <item row="0" column="0" alignment="Qt::AlignRight">
+      <item row="0" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>Hash algorithm</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
